PP-5143 Replace ImmutableMap.builder() and friends with Map.of(…)